# langchain-oracle

libs/checkpoint-oracledb/: Makefile  README.md  conformance-result.txt  pyproject.toml
libs/checkpoint-oracledb/examples/: checkpointer_agents_example.py  checkpointer_example.py  db_conn_utils.py  oracle_example_utils.py  store_entity_example.py  store_example.py  store_knowledge_base_example.py
libs/checkpoint-oracledb/langgraph/checkpoint/oracledb/: __init__.py  aio.py  base.py  base_async_adapter.py  schema_utils.py
libs/checkpoint-oracledb/langgraph/store/oracledb/: __init__.py  base.py  schema_utils.py
libs/checkpoint-oracledb/tests/: compose-oracle.yml  conformance.py
libs/oci/langchain_oci/: __init__.py
libs/oci/langchain_oci/agents/datastores/vectorstores/: opensearch.py
libs/oci/langchain_oci/agents/deep_research/: agent.py
libs/oci/langchain_oci/chat_models/: oci_generative_ai.py
libs/oci/langchain_oci/chat_models/providers/: cohere.py  generic.py
libs/oci/tests/integration_tests/agents/: conftest.py  test_agents.py  test_deep_research_integration.py
libs/oci/tests/integration_tests/chat_models/: test_tool_calling.py
libs/oci/tests/unit_tests/agents/: test_datastores.py  test_deep_research.py
libs/oci/tests/unit_tests/chat_models/: test_response_format.py  test_tool_call_turn_scoping.py  test_tool_schema_constraints.py
samples/11-deepresearch/: adb_multi_store_huggingface_example.py  opensearch_multi_index_huggingface_example.py
