[project]
name = "checkpoint-oracledb"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "langchain-oci>=0.2.5",
    "langchain-oracledb>=1.2.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-watcher>=0.6.3",
    "langgraph-checkpoint-conformance>=0.0.1",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
    "codespell>=2.4.2",
]
